--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,20 @@
 {
-  "name": "yii-dream-team/yii2-payeer",
+  "name": "yarcode/yii2-payeer",
   "description": "Yii2 Payeer Component",
   "type": "yii2-extension",
   "keywords": [
     "yii2",
     "payeer"
   ],
-  "homepage": "https://github.com/yii-dream-team/yii2-payeer",
+  "homepage": "https://github.com/yarcode/yii2-payeer",
   "license": "MIT",
   "authors": [
+    {
+      "name": "Valentin Konusov",
+      "email": "rlng-krsk@yandex.ru",
+      "homepage": "http://valentinek.ru",
+      "role": "Developer"
+    },
     {
       "name": "Alexey Samoylov",
       "email": "alexey.samoylov@gmail.com",
@@ -17,8 +23,8 @@
     }
   ],
   "support": {
-    "issues": "https://github.com/yii-dream-team/yii2-payeer/issues",
-    "source": "https://github.com/yii-dream-team/yii2-payeer"
+    "issues": "https://github.com/yarcode/yii2-payeer/issues",
+    "source": "https://github.com/yarcode/yii2-payeer"
   },
   "require": {
     "yiisoft/yii2": "~2",
@@ -26,7 +32,7 @@
   },
   "autoload": {
     "psr-4": {
-      "yiidreamteam\\payeer\\": "./src"
+      "yarcode\\payeer\\": "./src"
     }
   }
 }
